--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,12 @@ body {
   box-shadow: none !important;
 }
 
+.section{
+  padding: 80px 0;
+}
+
+/* header */
+
 header {
   width: 100%;
   position: absolute;
@@ -96,23 +102,106 @@ nav .brand-logo {
   font-size: 30px;
 }
 
-.home .scroll-down{
-    position: absolute;
-    bottom: 30px;
-    right: 50%;
-    transform: translate(50%);
-    -webkit-transform: translate(50%);
-    -moz-transform: translate(50%);
-    -ms-transform: translate(50%);
-    -o-transform: translate(50%);
-    animation: scolldown 2s ease infinite;
-    -webkit-animation: scolldown 2s ease infinite;
+.home .scroll-down {
+  position: absolute;
+  bottom: 30px;
+  right: 50%;
+  transform: translate(50%);
+  -webkit-transform: translate(50%);
+  -moz-transform: translate(50%);
+  -ms-transform: translate(50%);
+  -o-transform: translate(50%);
+  animation: scrollDown 2s ease infinite;
+  -webkit-animation: scrollDown 2s ease infinite;
 }
 
-@keyframes scrolldown{
-    
+@keyframes scrollDown {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
+  }
+
+  40% {
+    transform: translateY(-30px);
+    -webkit-transform: translateY(-30px);
+    -moz-transform: translateY(-30px);
+    -ms-transform: translateY(-30px);
+    -o-transform: translateY(-30px);
+  }
+
+  60% {
+    transform: translateY(-15px);
+    -webkit-transform: translateY(-15px);
+    -moz-transform: translateY(-15px);
+    -ms-transform: translateY(-15px);
+    -o-transform: translateY(-15px);
+  }
 }
 
-.home .scroll-down img{
-    width: 30px;
+.home .scroll-down img {
+  width: 20px;
+}
+
+/* about */
+
+.flex{
+  display: flex;
+}
+
+.about{
+  width: 100%;
+}
+
+.about img{
+  width: 100%;
+}
+
+.about .about-content h4{
+  font-weight: bold;
+  position: relative;
+  padding-bottom: 7px;
+  margin-bottom: 15px;
+}
+
+.about .about-content h4::before{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  width: 120px;
+  height: 2px;
+  background-color: #ff8f00;
+}
+
+.about .about-content p{
+  font-weight: bold;
+  position: relative;
+  padding-bottom: 10px;
+
+}
+
+.about .about-item{
+  text-align: center;
+  margin-top: 70px;
+}
+
+.about button{
+  background: #ff8f00;
+  border: none;
+  font-size: 14px;
+  color: #fff;
+  margin-top: 30px;
+  padding: 10px 25px;
+  border-radius: 25px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
+  cursor: pointer;
 }
