--- a/css/style.css
+++ b/css/style.css
@@ -235,14 +235,28 @@ nav .brand-logo {
   margin-top: 13px;
   position: relative;
   height: 220px;
+  overflow: hidden;
+}
+
+.service .service-item:hover img {
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
 }
 
 .service .service-item img {
   width: 100%;
   height: 220px;
+  transition: all 0.4s linear;
+  -webkit-transition: all 0.4s linear;
+  -moz-transition: all 0.4s linear;
+  -ms-transition: all 0.4s linear;
+  -o-transition: all 0.4s linear;
 }
 
-.service .service-item span{
+.service .service-item span {
   position: absolute;
   left: 0;
   right: 0;
@@ -253,33 +267,143 @@ nav .brand-logo {
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.8);
   opacity: 1;
-  transition: all .4s ease-in-out;
-  -webkit-transition: all .4s ease-in-out;
-  -moz-transition: all .4s ease-in-out;
-  -ms-transition: all .4s ease-in-out;
-  -o-transition: all .4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  -moz-transition: all 0.4s ease-in-out;
+  -ms-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
 }
 
-.service .service-item span p{
-  font-size: 20px;
+.service .service-item span p {
+  font-size: 17px;
   color: #fff;
   opacity: 1;
-  transition: all .4s ease-in-out;
-  -webkit-transition: all .4s ease-in-out;
-  -moz-transition: all .4s ease-in-out;
-  -ms-transition: all .4s ease-in-out;
-  -o-transition: all .4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  -moz-transition: all 0.4s ease-in-out;
+  -ms-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
 }
 
-.service .service-item:hover span{
+.service .service-item:hover span {
   opacity: 0;
 }
 
-.service .service-item:hover span p{
+.service .service-item:hover span p {
   transform: translateX(200px);
   -webkit-transform: translateX(200px);
   -moz-transform: translateX(200px);
   -ms-transform: translateX(200px);
   -o-transform: translateX(200px);
   opacity: 0;
+}
+
+/* work */
+
+.work {
+  width: 100%;
+}
+
+.work h4 {
+  margin-bottom: 25px;
+  position: relative;
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.work h4::before {
+  content: "";
+  position: absolute;
+  bottom: -6px;
+  width: 140px;
+  height: 2px;
+  background-color: #ff8f00;
+}
+
+.work .work-item {
+  position: relative;
+  margin-top: 17px;
+  height: 220px;
+  overflow: hidden;
+}
+
+.work .work-item img {
+  width: 100%;
+  height: 100%;
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  -moz-transition: all .4s ease-in-out;
+  -ms-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+}
+
+.work .work-item:hover img{
+  transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+}
+
+.work .work-item span{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  -moz-transition: all .4s ease-in-out;
+  -ms-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+}
+
+.work .work-item:hover span{
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.work .work-item span svg{
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  color: #fff;
+  font-size: 20px;
+  opacity: 0;
+  transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  -moz-transition: all .4s ease-in-out;
+  -ms-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+}
+
+.work .work-item span p{
+  position: absolute;
+  bottom: 10px;
+  right: 160px;
+  color: #fff;
+  font-size: 17px;
+  opacity: 0;
+  transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  -moz-transition: all .4s ease-in-out;
+  -ms-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+}
+
+.work .work-item:hover svg, .work .work-item:hover p{
+  opacity: 1;
+}
+
+.work .work-item:hover p{
+  transform: translateX(65px);
+  -webkit-transform: translateX(65px);
+  -moz-transform: translateX(65px);
+  -ms-transform: translateX(65px);
+  -o-transform: translateX(65px);
 }
