--- a/css/style.css
+++ b/css/style.css
@@ -407,3 +407,85 @@ nav .brand-logo {
   -ms-transform: translateX(65px);
   -o-transform: translateX(65px);
 }
+
+/* contact */
+
+.contact{
+  width: 100%;
+}
+
+.contact .contact-img{
+  width: 100%;
+  background: url(../images/contact-bg.jpg);
+  padding: 150px;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact .contact-img .title h4 {
+  margin-bottom: 25px;
+  position: relative;
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.contact .contact-img .title h4::before {
+  content: "";
+  position: absolute;
+  bottom: -8px;
+  width: 190px;
+  height: 2px;
+  background-color: #ff8f00;
+}
+
+.contact .contact-desc{
+  width: 100%;
+}
+
+.contact .contact-desc input{
+  width: 50%;
+}
+
+.contact .input-field label{
+    display: flex;
+    flex-direction: row;
+    margin-top: 15px;
+    margin-bottom: -25px;
+}
+
+.input-field>label {
+  position: relative;
+  font-size: 11px;
+  right: -80px;
+}
+
+.contact .form-btn{
+  width: 100%;
+  text-align: center;
+}
+
+.contact button{
+    background: #FF8F00;
+    color: #fff;
+    padding: 10px 75px;
+    border: 2px solid #FF8F00;
+    border-radius: 25px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
+    transition: all .3s ease-in;
+    -webkit-transition: all .3s ease-in;
+    -moz-transition: all .3s ease-in;
+    -ms-transition: all .3s ease-in;
+    -o-transition: all .3s ease-in;
+}
+
+.contact button:hover{
+    background: transparent;
+    color: #000;
+    cursor: pointer;
+}
